fix: prevent scrollbar when canvas gets window's width/height

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+html {
+  overflow: hidden;
+}
+
 main {
   width: 100vw;
   height: 100dvh;
